RESOLVED FIXED224031
Previous artwork isn't cleared when NowPlaying info doesn't contain an artwork
https://bugs.webkit.org/show_bug.cgi?id=224031
Summary Previous artwork isn't cleared when NowPlaying info doesn't contain an artwork
Jean-Yves Avenard [:jya]
Reported 2021-03-31 17:53:34 PDT
Previous artwork isn't cleared when no NowPlaying info doesn't contain an artwork
Attachments
Patch (1.68 KB, patch)
2021-03-31 17:58 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (6.75 KB, patch)
2021-03-31 18:12 PDT, Jean-Yves Avenard [:jya]
no flags
Patch (7.13 KB, patch)
2021-03-31 18:55 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-03-31 17:55:07 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-03-31 17:58:59 PDT
Jean-Yves Avenard [:jya]
Comment 3 2021-03-31 18:12:49 PDT
Jean-Yves Avenard [:jya]
Comment 4 2021-03-31 18:55:46 PDT
Eric Carlson
Comment 5 2021-04-01 08:15:31 PDT
Comment on attachment 424860 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=424860&action=review > Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:322 > + MRMediaRemoteSetNowPlayingInfoWithMergePolicy(info.get(), MRMediaRemoteMergePolicyReplace); This is fine for now, but I assume it is more expensive so we should see if passing MRMediaRemoteMergePolicyUpdate when the artwork doesn't change works.
EWS
Comment 6 2021-04-01 08:19:45 PDT
Committed r275360: <https://commits.webkit.org/r275360> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424860 [details].
Jean-Yves Avenard [:jya]
Comment 7 2021-04-01 15:30:13 PDT
(In reply to Eric Carlson from comment #5) > Comment on attachment 424860 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=424860&action=review > > > Source/WebCore/platform/audio/cocoa/MediaSessionManagerCocoa.mm:322 > > + MRMediaRemoteSetNowPlayingInfoWithMergePolicy(info.get(), MRMediaRemoteMergePolicyReplace); > > This is fine for now, but I assume it is more expensive so we should see if > passing MRMediaRemoteMergePolicyUpdate when the artwork doesn't change works. The recommendation to use the replace policy came from the MR team and I specifically asked about the extra overhead due to this. But the update policy is only designed to publish one field at the time and re-use and only replace the fields we've already passed. The way webkit uses MR is by publishing all its info each time, it never updates as such. Also, looking at the MR source code update vs replace doesn't add any overhead really. It's a simple test that either use the CFDictionary it receives or update the cached one with the new values found in the new one. Ultimately you end up with a complete CFDictionary of things being sent to the MR listeners. What we could do however is stop sending the artwork all the time and use the update policy instead.
Note You need to log in before you can comment on or make changes to this bug.