Previous artwork isn't cleared when NowPlaying info doesn't contain an artwork https://bugs.webkit.org/show_bug.cgi?id=224031 <rdar://76044544>

Patch by Jean-Yves Avenard <jya@apple.com> on 2021-04-01
Reviewed by Youenn Fablet.

Source/WebCore:

Manually tested, no framework available to test such change.

* platform/audio/cocoa/MediaSessionManagerCocoa.mm:
(WebCore::MediaSessionManagerCocoa::setNowPlayingInfo): use MRMediaRemoteSetNowPlayingInfoWithMergePolicy instead.
* platform/mac/MediaRemoteSoftLink.h: Soft link MRMediaRemoteSetNowPlayingInfoWithMergePolicy
* platform/mac/MediaRemoteSoftLink.mm:

Source/WebCore/PAL:

* pal/spi/mac/MediaRemoteSPI.h: Add MRMediaRemoteMergePolicy enum definitions.

Canonical link: https://commits.webkit.org/236031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275360 268f45cc-cd09-0410-ab3c-d52691b4dbfc